# videomap.earth

./: .gitignore  CNAME  README.md  index.html  package.json  pyproject.toml
css/: index.css
js/: index.js
py/: requirements.txt  stac2video.py
src/videomap/: stac2video.py
videos/: videomap--985632-4721171--980512-4726291.webm  videomap-12-1943-1569.webm  videomap-12-1943-1570.webm  videomap-12-1944-1569.webm  videomap-12-1944-1570.webm  videos.geojson
